--- a/07MapsGps/app/src/main/AndroidManifest.xml
+++ b/07MapsGps/app/src/main/AndroidManifest.xml
@@ -39,5 +39,10 @@
             </intent-filter>
         </activity>
     </application>
+    <!-- To request foreground location access, declare one of these permissions. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
